--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="col-md-8 col-sm-12 g-4">
                 <div class="accordion accordion-flush" id="accordionFlushExample">
   <div class="accordion-item">
-    <h2 class="accordion-header">
+    <h2 class="accordion-header" id="info">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
         Historia Original
       </button>
