--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 </div>
         <div class="row">
             <div class="col-md-8 col-sm-12 g-4">
-                <div class="accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion accordion-flush" id="info">
   <div class="accordion-item">
-    <h2 class="accordion-header" id="info">
+    <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
         Historia Original
       </button>
@@ -233,3 +233,4 @@
 </body>
 
 </html>
+
